# fuse-query

./: Cargo.toml  bench_kv.sh
common/arrow/: Cargo.toml
common/catalog/src/: catalog.rs
common/catalogs/: Cargo.toml
common/catalogs/src/: lib.rs
common/catalogs/src/hive/: hive_catalog.rs  hive_database.rs  hive_table.rs  hive_table_source.rs
common/dal/src/: blob_accessor.rs
common/datablocks/src/: data_block.rs
common/datavalues/src/columns/: column.rs
common/exception/src/: exception.rs
common/flights/src/: lib.rs  store_client.rs  store_do_action.rs  store_do_get.rs
common/flights/src/impls/: kv_api_impl.rs  meta_api_impl.rs  mod.rs  storage_api_impl.rs
common/management/: Cargo.toml
common/management/src/user/: mod.rs  user_mgr.rs  user_mgr_test.rs
common/meta/grpc/src/: grpc_client.rs
common/pipeline/: Cargo.toml
common/pipeline-sources/: Cargo.toml
common/pipeline-sources/src/: lib.rs
common/pipeline-sources/src/sources/: async_source.rs  empty_source.rs  mod.rs  sync_source.rs
common/pipeline/src/: lib.rs  sort_util.rs
common/pipeline/src/sinks/: async_sink.rs  empty_sink.rs  subquery_receive_sink.rs  sync_sink.rs  sync_sink_sender.rs
common/pipeline/tests/processors/: port_test.rs  resize.rs
common/planners/: Cargo.toml
common/planners/src/: lib.rs  plan_insert_into.rs  plan_node.rs  plan_visitor.rs
common/runtime/src/: runtime.rs
common/storages/: Cargo.toml
common/storages/src/: lib.rs
common/storages/src/hive/: hive_parquet_block_reader.rs  mod.rs
common/storages/src/information_schema/: columns_table.rs  keywords_table.rs  schemata_table.rs  tables_table.rs  views_table.rs
common/storages/src/null/: null_table.rs
common/storages/src/random/: random_table.rs
common/storages/src/system/: columns_table.rs  configs_table.rs  contributors_table.rs  credits_table.rs  databases_table.rs  engines_table.rs  functions_table.rs  metrics_table.rs  mod.rs  one_table.rs  processes_table.rs  query_log_table.rs  roles_table.rs  settings_table.rs  stages_table.rs  table.rs  tables_table.rs  tracing_table.rs  users_table.rs
common/storages/src/view/: view_table.rs
common/store-api/src/: kv_api.rs  lib.rs
common/streams/src/: stream.rs
common/table-functions/: Cargo.toml
common/table-functions/src/: async_crash_me.rs  lib.rs  memory_block_part.rs  numbers_table.rs  sync_crash_me.rs
etcd/: r1.sh  r2.sh  r3.sh
fusequery/query/src/datasources/: catalog.rs  datasource.rs  mod.rs  table.rs  tests.rs
fusequery/query/src/datasources/remote/: mod.rs  remote_table.rs  remote_table_do_read.rs  remote_table_stream.rs  store_client_provider.rs
fusequery/query/src/interpreters/: interpreter_factory.rs  interpreter_insert_into.rs  mod.rs
fusequery/query/src/sessions/: context.rs  sessions.rs  status.rs
fusequery/query/src/sql/: plan_parser.rs
fusequery/query/src/tests/: context.rs  number.rs
fusestore/store/src/api/rpc/: flight_service.rs  flight_service_test.rs
fusestore/store/src/data_part/: appender_test.rs  mod.rs  part_info.rs
fusestore/store/src/dfs/: distributed_fs.rs
fusestore/store/src/engine/: mem_engine.rs
fusestore/store/src/executor/: action_handler.rs  kv_handlers.rs
fusestore/store/src/fs/: ifs.rs
fusestore/store/src/localfs/: local_fs.rs
fusestore/store/src/meta_service/: raftmeta.rs  state_machine.rs
fusestore/store/src/user/: mod.rs  users.rs  users_test.rs
query/: Cargo.toml
query/src/catalogs/: catalog_manager.rs  mod.rs  table.rs
query/src/catalogs/hive/: hive_table_source.rs  mod.rs
query/src/databases/system/: system_database.rs
query/src/datasources/: mod.rs
query/src/datasources/fuse_table/: README.md  constants.rs  fuse_table.rs  mod.rs  table.rs
query/src/datasources/fuse_table/io/: block_appender.rs  block_reader.rs  mod.rs  snapshot_reader.rs
query/src/datasources/fuse_table/types/: mod.rs  table_snapshot.rs
query/src/datasources/fuse_table/util/: index_tools.rs  mod.rs  projection_helper.rs
query/src/datasources/local/: mod.rs
query/src/datasources/local/poc/: fuse_table.rs  index_util.rs  mod.rs  table_snapshot.rs
query/src/pipelines/executor/: pipeline_pushing_executor.rs
query/src/pipelines/processors/: mod.rs
query/src/pipelines/processors/sources/: blocks_source.rs  mod.rs  sync_ck_source_receiver.rs  sync_source_receiver.rs
query/src/pipelines/processors/transforms/: transform_sort_partial.rs
query/src/sessions/: query_ctx.rs  session.rs  session_mgr.rs  session_settings.rs
query/src/storages/: mod.rs  storage_context.rs
query/src/storages/clusters/: clusters_table.rs  mod.rs
query/src/storages/fuse/io/: block_reader.rs  block_stream_writer.rs  block_writer.rs  retry.rs
query/src/storages/memory/: memory_table.rs
query/src/storages/null/: null_table.rs
query/src/storages/random/: random_table.rs
query/src/storages/system/: query_log_table.rs  table.rs  tracing_table.rs
query/src/table_functions/: mod.rs  numbers_table.rs  sync_crash_me.rs
scripts/ci/deploy/: databend-query-cluster-3-nodes.sh
scripts/ci/deploy/config/: databend-meta-node-1.toml  databend-meta-node-2.toml  databend-meta-node-3.toml  databend-query-node-1.toml
src/binaries/: Cargo.toml
src/binaries/metabench/: main.rs
src/binaries/query/: README_REVISE.md  revise_main.rs
src/common/grpc/src/: client_conf.rs  lib.rs
src/common/storage/src/: operator.rs
src/meta/api/src/: schema_api_impl.rs
src/meta/client/: Cargo.toml
src/meta/client/src/: kv_api_etcd_impl.rs  lib.rs
src/meta/store/: Cargo.toml
src/meta/store/src/: lib.rs
src/query/catalog/src/: runtime_filter_info.rs  table.rs
src/query/config/src/: config.rs  inner.rs
src/query/expression/src/: block.rs  evaluator.rs  register.rs
src/query/formats/src/: format_csv.rs  format_factory.rs  format_parquet.rs  format_tsv.rs  lib.rs
src/query/management/: Cargo.toml
src/query/service/: Cargo.toml
src/query/service/benches/: bench.rs
src/query/service/src/: lib.rs  table_meta_data_revise.rs
src/query/storages/fuse/: Cargo.toml
src/query/storages/stage/: Cargo.toml
(+158 files in other folders)
