[workspace]
members = [
    # Common
    "common/arrow",
    "common/building",
    "common/datablocks",
    "common/datavalues",
    "common/flights",
    "common/functions",
    "common/metatypes",
    "common/infallible",
    "common/planners",
    "common/progress",
    "common/runtime",
    "common/streams",
    "common/exception",
    "common/tracing",
    "common/profiling",
    "common/store-api",
    "common/stoppable",
    "common/management",
    "common/io",
    "common/cache",
    "common/dal",
    "common/indexing",

    # Datafuse Query
    "query",

    # Datafuse Store
    "store",

    # Datafuse SQL Fuzz
    "query/fuzz",

    # CLI
    "cli"
]

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
arrow2 = { path = "vendor/arrow2/" }


#arrow = { package = "arrow2", git="https://github.com/datafuse-extras/arrow2", rev = "7765067" }
[patch."https://github.com/datafuse-extras/arrow2"]
arrow2 = { path = "vendor/arrow2/" }

