[package]
name = "common-storages"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[features]
hive = ["opendal/services-hdfs"]

[dependencies]
common-arrow = { path = "../arrow" }
common-base = { path = "../base" }
common-datablocks = { path = "../datablocks" }
common-datavalues = { path = "../datavalues" }
common-exception = { path = "../exception" }
common-planners = { path = "../planners" }
common-tracing = { path = "../tracing" }

anyhow = "1.0.58"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
futures = "0.3.21"
globiter = "0.1.0"
opendal = { version = "0.11.2", features = ["retry", "services-http"] }
percent-encoding = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
typetag = "0.1.8"
