[package]
name = "common-storages"
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[features]
hive = ["opendal/services-hdfs"]

[dependencies]
common-arrow = { path = "../arrow" }
common-base = { path = "../base" }
common-catalog = { path = "../catalog" }
common-contexts = { path = "../contexts" }
common-datablocks = { path = "../datablocks" }
common-datavalues = { path = "../datavalues" }
common-exception = { path = "../exception" }
common-functions = { path = "../functions" }
common-meta-api = { path = "../meta/api" }
common-meta-app = { path = "../meta/app" }
common-meta-types = { path = "../meta/types" }
common-metrics = { path = "../metrics" }
common-pipeline = { path = "../pipeline" }
common-pipeline-sources = { path = "../pipeline-sources" }
common-planners = { path = "../planners" }
common-streams = { path = "../streams" }
common-tracing = { path = "../tracing" }

anyhow = "1.0.58"
async-trait = { git = "https://github.com/datafuse-extras/async-trait", rev = "f0b0fd5" }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
futures = "0.3.21"
globiter = "0.1.0"
itertools = "0.10.3"
opendal = { version = "0.11.2", features = ["retry", "services-http"] }
parking_lot = "0.12.1"
percent-encoding = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
snailquote = "0.3.1"
typetag = "0.1.8"
walkdir = "2.3.2"

[build-dependencies]
common-building = { path = "../building" }
